[package]
name = "zg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
glob = "0.3.1"
rayon = "1.8.0"
regex = "1.10.2"
zip = "0.6.6"
